What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

July 27, 2011
! [mickael] added new decoding/dump tests based on data found in input/nonregresion repository (remove JPEG2000_CONFORMANCE_DATA_ROOT variable, add REF_DECODER_BIN_PATH variable for the encoder test suite). Remove definitively old tests. 
! [mickael] correct some warnings detected under unix platform

July 26, 2011
! [mickael] delete double semi-colon at end of line which generate crash on win platform
! [mickael] use ansi c function fgets instead of GNU function getline to avoid build error with win platform
! [mickael] correct CRLF problem between unix baseline and win platform test file generated by j2k_dump

July 25, 2011
* [mickael] fixed issue 74 for trunk
! [mickael] modify j2k_dump to support output file, needed for non-regression tests
+! [mickael] added non-regression tests for j2k_dump function and conformance data

July 22, 2011
! [mickael] correct some troubles about thirdparty when they are used

July 21, 2011
! [mickael] correct a compil error linked to getopt with win platform
!+ [mickael] add new decode tests based on conformance data and tolerance. Non regression is also added on the decoder output. Deactivate old tests.
! [mickael] to follow last version of conformance data about component separator for pgx file, we changed - to _ separator even if nb component = 1
! [mickael] removed unused warning configuration message

July 18, 2011
! [mickael] correct build error (mislocated declaration) with convert to tiff function when HAVE_LIBTIFF is defined

July 13, 2011
! [mickael] improved some CMakeLists files linked to the build of applications which used thirdparty

_______ R812 : 'openjpeg-1.5' branch created ______________________________

July 10, 2011
! [antonin] improved encoding speed in t1_encode_cblks (credit to Giuseppe Baruffa)

July 3, 2011
* [antonin] fixed bmptoimage (see http://groups.google.com/group/openjpeg/browse_thread/thread/33a24c5896bf6391)